srcs/ftps.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftps
spec:
  type: NodePort
  selector:
    app: ftps
  ports:
    - name: ftps
      port: 21
      nodePort: 30021
    - name: ftps-passive
      port: 30020
      nodePort: 30020

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps-deployment
spec:
  selector:
    matchLabels:
      app: ftps
  replicas: 1
  template:
    metadata:
      labels:
        app: ftps
    spec:
      containers:
      - name: ftps
        image: ftps_img
        imagePullPolicy: Never
        securityContext:
          privileged: true
