srcs/influxdb.yaml
kind: Service
apiVersion: v1
metadata:
  name: influxdb
spec:
  type: NodePort
  selector:
    app: influxdb
  ports:
    - name: influxdb
      port: 8086
      nodePort: 8086
---

apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: influxdb-deployment
spec:
  selector:
    matchLabels:
      app: influxdb
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb_img
        imagePullPolicy: Never
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /var/lib/influxdb
          name: influxdb-pv-data
          # readOnly: false
      volumes:
      - name: influxdb-pv-data
        persistentVolumeClaim:
          claimName: pvc-influxdb
      # ports:
        # - containerPort: 80
