srcs/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      protocol: TCP
      nodePort: 80
    - name: https
      port: 443
      protocol: TCP
      nodePort: 443
    - name: ssh
      port: 2022
      protocol: TCP
      nodePort: 2022

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx_img
        imagePullPolicy: Never
        securityContext:
          privileged: true
        ports:
        - containerPort: 80
        - containerPort: 443
      #   volumeMounts:
      #   - name: wordpress-persistent-storage
      #     mountPath: /www/wordpress
      #     readOnly: true
      # volumes:
      # - name: wordpress-persistent-storage
      #   persistentVolumeClaim:
      #     claimName: wp-pv-claim
