srcs/phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
spec:
  type: ClusterIP
  selector:
    app: phpmyadmin
  ports:
    - name: pma
      port: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pma-deployment
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin_img
        imagePullPolicy: Never
        securityContext:
          privileged: true
        ports:
        - containerPort: 5000
