srcs/telegraf.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf
  labels:
    name: telegraf
spec:
  selector:
    app: telegraf
  clusterIP: None

---

apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: telegraf-deployment
spec:
  selector:
    matchLabels:
      app: telegraf
  replicas: 1
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      serviceAccountName: telegraf-account
      containers:
      - name: telegraf
        image: telegraf_img
        imagePullPolicy: Never
        securityContext:
          privileged: true
