srcs/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - name: wordpress
      port: 5050
      protocol: TCP
      targetPort: 5050

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
    # strategy:
    # type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress_img
        imagePullPolicy: Never
        ports:
        - containerPort: 5050
          name: wordpress
