srcs/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: ft-services.julnolle
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
    # https:
    #   paths:
    #   - path: /
    #     backend:
    #       serviceName: nginx
    #       servicePort: 443
