srcs/ingress_https.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-https
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  backend:
    serviceName: nginx
    servicePort: 443
  rules:
  - http:
      paths:
      - path: /ssl
        backend:
          serviceName: nginx
          servicePort: 443
      # - path: /grafana(/|$)(.*)
      #   backend:
      #     serviceName: grafana
      #     servicePort: 3000
      # - path: /wordpress(/|$)(.*)
      #   backend:
      #     serviceName: wordpress
      #     servicePort: 5050
      # - path: /phpmyadmin(/|$)(.*)
      #   backend:
      #     serviceName: phpmyadmin
      #     servicePort: 5000
      # - path: /
      #   backend:
      #     serviceName: nginx
      #     servicePort: 443
    # https:
    #   paths:
    #   - path: /
    #     backend:
    #       serviceName: nginx
    #       servicePort: 443
